# data-engineer-playground

./: LICENSE  Makefile  README.md  setup.py
extract/MercadoBitcoin/: .dockerignore  Dockerfile  Makefile  main.py  pyproject.toml
extract/MercadoBitcoin/mercado_bitcoin/: ingestors.py
extract/MercadoBitcoin/tests/: test_apis.py
workflows/: develop.yml  production.yml
