[tool.poetry]
name = "mercadobitcoin"
version = "0.1.0"
description = ""
authors = ["Cristian Webber <cbwebbers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
ratelimit = "^2.2.1"
backoff = "^1.11.1"
pynamodb = "^5.1.0"
boto3 = "^1.18.63"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
